# NovaEngine

./: .gitignore  CMakeLists.txt
include/: component.hpp  entity.hpp  meta.hpp  set_adapter.hpp  system.hpp  test.cpp  util.hpp  world.hpp
src/: main.cpp
